--- a/report.qmd
+++ b/report.qmd
@@ -44,7 +44,7 @@ Five expectations when exploring the **Weeping Mulla Mulla** sighting:
 
 -   We expect the sightings to be consistent numbers of sightings with
     an increasing trend as sighting/reporting/monitoring methods become
-    better.
+    better. However, this anticipation may exclude years during the COVID-19 pandemic. Since the data relies on human observation, there may ben fewer sightings due to a lack of reporting.
 
 -   We expect the sightings to be clustered in areas with a water source
     as the plant prefer harsh, dry, and hot sandy habitats.
@@ -276,6 +276,25 @@ combined_plot +
   labs(title = "Weeping Mulla Mulla Sightings By Month")
 ```
 So far, the map data has shown us the areas where observations are most frequent. We can see that there are primarily two clusters, one in Western Australia and another in the Northern Territory. These clusters are also evident on some of the maps by month.
+
+### Trend expectation
+
+```{r}
+weeping_mulla_mulla %>%
+  group_by(Year) %>%
+  count() %>%
+  ggplot(aes(x = Year, y = n, fill = as.factor(Year))) +
+  geom_histogram(stat = "identity") +
+  scale_fill_manual(values = c("2020" = "#c599b2", "2021" = "#c599b2")) +
+  labs(
+    title = "Weeping Mulla Mulla Observations by Year",
+    y = "Number of observations"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "none", legend.title = element_blank())
+```
+
+We can see that the yearly observations do not meet our expectation of reduced observations during COVID-19. There was no decrease in observations from 2000 to 2021.
 
 ### Seasonality expectation
 
