--- a/report.qmd
+++ b/report.qmd
@@ -43,7 +43,7 @@ Five expectations when exploring the **Weeping Mulla Mulla** sighting:
 
 -   We expect the sightings to be consistent numbers of sightings with
     an increasing trend as sighting/reporting/monitoring methods become
-    better. However, this anticipation may exclude years during the COVID-19 pandemic. Since the data relies on human observation, there may ben fewer sightings due to a lack of reporting.
+    better. However, this anticipation may exclude years during the COVID-19 pandemic. Since the data relies on human observation, there may have been fewer sightings due to a lack of reporting.
 
 -   We expect the sightings to be clustered in areas with a water source
     as the plant prefer harsh, dry, and hot sandy habitats.
@@ -62,7 +62,7 @@ Five expectations when exploring the **Weeping Mulla Mulla** sighting:
 -->
 ```
 
-### Processing the data
+### Species data
 
 Below is the code to download the raw data directly from the [Atlas of Living Australia](https://www.ala.org.au/).
 
@@ -103,9 +103,9 @@ storage <- galah_call() %>%
   filter(basisOfRecord == "HUMAN_OBSERVATION")
 ```
 
-The data is from the Atlas of Living Australia website aggregates multiple data sources and includes variables indicating location, date, time, scientific name, resource names, and species status. There are `r nrow(storage)` observations and `r ncol(storage)` variables in the raw data set.
+The data obtained from the Atlas of Living Australia website combines information from multiple sources and includes various variables such as location, date, time, scientific names, resource names, species status, and more. The raw data set contains `r nrow(storage)` observations and `r ncol(storage)` variables.
 
-For our analysis, we will primarily utilise the location and event time data. However, a comprehensive dictionary is provided below:
+For the analysis, the data is filtered to primarily focus on utilising the location and event time data. This is because the other variables do not contribute significantly to meaningful insights. However, a comprehensive dictionary of all the variables is provided below:
 
 ```{r data-dictionary, echo=FALSE, warning=FALSE}
 dictionary <- data.frame(
@@ -131,6 +131,7 @@ dictionary <- data.frame(
 
 kable(dictionary, format = "markdown")
 ```
+
 ```{r species-data-cleaning}
 weeping_mulla_mulla <- storage %>%
   select(decimalLongitude, decimalLatitude, eventDate, cl959) %>%
@@ -152,9 +153,11 @@ save(weeping_mulla_mulla, file = ("data/weeping_mulla_mulla.rda"))
 
 ### Weather data
 
-```{r}
-max(weeping_mulla_mulla$lga)
-```
+**Obtaining weather station data**
+
+The distribution of the **Weeping Mulla Mulla** commonly spans the local government areas (LGAs) of Ashburton, Broome, Derby-West Kimberley, East Pilbara, Halls Creek, Karratha, Laverton, Meekatharra, Ngaanyatjarraku, Port Hedland, Upper Gascoyne, and Wyndham-East Kimberley, as per findings from ([Florabase](https://florabase.dbca.wa.gov.au/browse/profile.php/2704)).
+
+Since weather is an important factor in the occurrences of species, the Global Historical Climatology Network (GHCN) database contains weather station data that are useful for analysing trends in weather patterns and precipitation. Obtaining the data via the `rnoaa` package for Australia was completed using the code below:
 
 ```{r weather-data, warning=FALSE, message=FALSE}
 library(rnoaa)
@@ -171,30 +174,82 @@ aus_stations <- ghcnd_stations() |>
   select(-data) 
 ```
 
-The distribution of the Weeping Mulla Mulla commonly spans the local
-government areas (LGAs) of Ashburton, Broome, Derby-West Kimberley, East
-Pilbara, Halls Creek, Karratha, Laverton, Meekatharra, Ngaanyatjarraku,
-Port Hedland, Upper Gascoyne, Wyndham-East Kimberley, as per
-([Florabase](https://florabase.dbca.wa.gov.au/browse/profile.php/2704)).
+Next, when filtering the weather stations to be within the vicinity of **Weeping Mulla Mulla**, it becomes evident that the **Weeping Mulla Mulla** is found in the vicinity of 42 weather stations.
 
-As such, we can subset the temperature data for some of these specific
-suburbs.
+```{r, echo=FALSE, results=FALSE}
+range(weeping_mulla_mulla$longitude)
+range(weeping_mulla_mulla$latitude)
 
--   broome airport ASN00003003
--   derby aero ASN00003032
--   halls creek airport ASN00002012
--   karratha aero ASN00004083
--   laverton aero ASN00012305
--   laverton raaf ASN00087031
--   meekatharra airport ASN00007045
--   port hedland airport ASN00004032
--   gascoyne junction ASN00006022
--   wynyard airport ASN00091107
--   wyndham aero ASN00001006
+aus_stations_filtered <- aus_stations %>% 
+  filter(115.6102 <= longitude & longitude <= 137.1930,
+         -24.92637 <= latitude & latitude <= -15.14837)
+```
+
+```{r echo=FALSE}
+data(world, package = "spData")
+australia <- world[world$iso_a2 == "AU", ]
+
+australia_plot <- ggplot(australia) + geom_sf(fill = "#5b9b2e")
+
+combined_plot <- australia_plot +
+  geom_point(data = weeping_mulla_mulla,
+             aes(x = longitude, y = latitude),
+             colour = "#c599b2", alpha= 0.3, size = 2.5) +
+  labs(title = "Weeping Mulla Mulla Sightings and Weather Stations", 
+       x = "Longitude", 
+       y = "Latitude", 
+       subtitle = "1987 - Present") +
+  theme_minimal()
+
+combined_plot +
+  geom_point(
+    data = aus_stations_filtered,
+    aes(
+      x = longitude,
+      y = latitude,
+      color = name == "tennant creek airport"
+    ),
+    shape = 2
+  ) +
+  scale_color_manual(values = c("FALSE" = "#222233", "TRUE" = "white")) +
+  theme(legend.position = "none")
+```
+```{r echo=FALSE}
+weeping_mulla_mulla %>%
+  leaflet() %>%
+  addProviderTiles("Esri.DeLorme") %>%
+  setView(lat = -21.833, lng = 128.583, zoom = 5) %>%
+  addCircleMarkers(lng = ~longitude, 
+                   lat = ~latitude,  
+                   stroke = FALSE, 
+                   fillOpacity = 0.1,
+                   color = "#c599b2",
+                   radius = 10) %>%
+  addCircleMarkers(data = aus_stations_filtered,  
+                   lng = ~longitude,
+                   lat = ~latitude,
+                   stroke = FALSE, 
+                   fillOpacity = 1,  
+                   color = "#222233",      
+                   radius = 3) %>% 
+   addCircleMarkers(data = aus_stations_filtered %>% filter(name == "tennant creek airport"),
+                   lng = ~longitude,
+                   lat = ~latitude,
+                   stroke = FALSE, 
+                   fillOpacity = 1,  
+                   color = "red",      
+                   radius = 5)
+```
+
+The triangles on the map represent the locations of 42 weather stations. The purple points, with varying alpha and size settings, help to identify the areas with the highest occurrence rates. Notably, the white triangle represents the Tennant Creek Airport weather station, which records the majority of observations. Given this focus, the analysis can be narrowed down by filtering the weather station data specifically for Tennant Creek.
+
+**Obtaining weather data for Tennant Creek**
+
+The code for obtaining precipitation, maximum temperature, and minimum temperature data for the town is provided below:
 
 ```{r, warning=FALSE, message=FALSE}
-wyndhamaero <- aus_stations |>
-  filter(id == "ASN00001006") |>
+tennant_creek_airport <- aus_stations |>
+  filter(id == "ASN00015135") |>
   rowwise() |>
   mutate(ts = list(meteo_pull_monitors(
     monitors = id, var = c("PRCP", "TMAX", "TMIN"),
@@ -205,6 +260,21 @@ wyndhamaero <- aus_stations |>
   select(id, long, lat, elev, name, wmo_id, ts) %>%
   unnest(ts) |>
   mutate(tmax = tmax/10, tmin = tmin/ 10)
+```
+
+**Tennant Creek in Barkly Region**
+
+The species dataset includes local government information, and as Tennant Creek is situated in the Barkly region, the final step is to integrate temperature data from weather stations into observations within the Barkly region, creating a comprehensive dataset encompassing both observations and temperature data.
+
+```{r}
+temperature <- weeping_mulla_mulla %>%
+  left_join(tennant_creek_airport, by = c("eventDate" = "date")) %>%
+  filter(!is.na(tmax) & !is.na(tmin)) %>% 
+  select(latitude:Day, prcp:tmin) %>% 
+  mutate(sighting = ifelse(lga == "Barkly ", 1, 0)) %>% 
+  mutate_at(vars(prcp:tmin), ~ifelse(sighting == 0, NA, .))
+
+save(temperature, file = ("data/temperature.rda"))
 ```
 
 ## Initial data analysis
@@ -246,7 +316,13 @@ degree is 111 kilometers) insignificant in our spatial analysis.
 
 ### Spatial expectation
 
-We expect most of the sighting locations to be in Western Australia territory. The plot of sightings below has met our expectations; however, there are also many sightings in the Northern Territory.
+To evaluate the spatial distribution of the species, a method involving the use of a map to pinpoint locations was employed. This was achieved by utilising the `spData` package in conjunction with its `world` data.
+
+The initial expectation was that the majority of sightings would be concentrated in Western Australia. 
+
+The map displaying the sightings below validates the initial hypothesis. However, it also reveals a significant number of sightings in the Northern Territory.
+
+Most of the sightings are clustered in the northern regions of Western Australia, aligning with expectations. Notably, there are no sightings in the southern areas of Western Australia, including the city of Perth.
 
 ```{r, echo=FALSE}
 data(world, package = "spData")
@@ -257,7 +333,7 @@ australia_plot <- ggplot(australia) + geom_sf(fill = "#5b9b2e")
 combined_plot <- australia_plot +
   geom_point(data = weeping_mulla_mulla,
              aes(x = longitude, y = latitude),
-             colour = "#c599b2",) +
+             colour = "#c599b2") +
   labs(title = "Weeping Mulla Mulla Sightings Across Australia", 
        x = "Longitude", 
        y = "Latitude", 
@@ -269,7 +345,13 @@ combined_plot
 
 ### Temporal expectation
 
-We expect sightings of the **Weeping Mulla Mulla** to be more frequent from March to October. This expectation aligns with our observations, as there are fewer points on the map in January, February, November, and December.
+To assess the temporal occurrences of the species, the same method of using a map to pinpoint locations was employed. However, an additional step was introduced, involving the segmentation of the data by month to distribute the results throughout the year.
+
+The initial expectation was that the **Weeping Mulla Mulla** would exhibit a higher frequency of observations from March to October.
+
+The map displaying the sightings by month validates this initial hypothesis, as there are fewer data points on the map in January and February, as well as in November and December.
+
+Interestingly, a new insight emerges when the data is segmented by month. The previous map showed the regions where observations were most frequent, namely Western Australia and the Northern Territory. Now, when the data is subset by month, it becomes apparent that these two regions remain the primary clusters.
 
 
 ```{r, echo = FALSE}
@@ -278,9 +360,16 @@ combined_plot +
   theme_void() +
   labs(title = "Weeping Mulla Mulla Sightings By Month")
 ```
-So far, the map data has shown us the areas where observations are most frequent. We can see that there are primarily two clusters, one in Western Australia and another in the Northern Territory. These clusters are also evident on some of the maps by month.
 
 ### Trend expectation
+
+Since the data relies on human observation, it was anticipated that there might have been fewer sightings due to a lack of reporting.
+
+By employing a simple method of plotting the number of observations against the years using a histogram, it can be seen that there was no indication of reduced observations during the COVID-19 years from 2000 to 2021. In fact, 2021 recorded the second-highest number of observations for the species.
+
+Nevertheless, an interesting new observation stands out - a significant spike in sightings occurred in 2015. This spike was the highest, surpassing even the sightings in 2021, with 108 observations compared to 34, which is more than three times as many.
+
+Currently, there are no findings that can explain this phenomenon.
 
 ```{r, echo=FALSE, warning =FALSE}
 weeping_mulla_mulla %>%
@@ -296,8 +385,6 @@ weeping_mulla_mulla %>%
   theme_minimal() +
   theme(legend.position = "none", legend.title = element_blank())
 ```
-
-We can see that the yearly observations do not meet our expectation of reduced observations during COVID-19. There was no decrease in observations from 2000 to 2021.
 
 ### Seasonality expectation
 
@@ -377,7 +464,7 @@ weeping_mulla_mulla %>%
                    stroke = FALSE, 
                    fillOpacity = 0.3, 
                    color = "#5b9b2e"
-)
+) 
 ```
 
 Based on the map above, we can see that the main cluster of **Weeping
