--- a/report.qmd
+++ b/report.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Weeping Mulla Mulla: Ptilotus Calostachyus"
-author: "**Team name:** ACDC </br> **Team members:** </br> Khuyen Nguyen _kngu0086@student.monash.edu_ </br> Khanh Pham _mpha0054@student.monash.edu_"
+author: "**Team name:** ACDC </br> **Team members:** </br> Khuyen Nguyen _kngu0086@student.monash.edu_ </br> Khanh Pham </br> _mpha0054@student.monash.edu_"
 format: html
 toc: true
 editor: 
@@ -8,12 +8,13 @@ editor:
     wrap: 72
 ---
 
-```{r, echo=FALSE, message=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(galah)
 library(kableExtra)
 library(leaflet)
 library(spData)
 library(tidyverse)
+library(nullabor)
 ```
 
 ## Introduction
@@ -43,7 +44,9 @@ Five expectations when exploring the **Weeping Mulla Mulla** sighting:
 
 -   We expect the sightings to be consistent numbers of sightings with
     an increasing trend as sighting/reporting/monitoring methods become
-    better. However, this anticipation will exclude years during the COVID-19 pandemic. Since the data relies on human observation, there may be fewer sightings due to a lack of reporting.
+    better. However, this anticipation will exclude years during the
+    COVID-19 pandemic. Since the data relies on human observation, there
+    may be fewer sightings due to a lack of reporting.
 
 -   We expect the sightings to be clustered in areas with a water source
     as the plant prefers harsh, dry, and hot sandy habitats.
@@ -52,11 +55,23 @@ Five expectations when exploring the **Weeping Mulla Mulla** sighting:
     as plants typically begin to bloom after wet season, which is around
     June - August for Perth.
 
-This report aims to provide a comprehensive analysis of the **Weeping Mulla Mulla**, utilising primary data sources from the ALA Atlas of Living Australia and the Global Historical Climatology Network (GHCN) database.
+This report aims to provide a comprehensive analysis of the **Weeping
+Mulla Mulla**, utilising primary data sources from the ALA Atlas of
+Living Australia and the Global Historical Climatology Network (GHCN)
+database.
 
-Throughout this exploration of expectations, numerous intriguing observations were uncovered that were not initially anticipated. Notably, the employment of `spData` and `leaflet` effectively visualised these findings.
+Throughout this exploration of expectations, numerous intriguing
+observations were uncovered that were not initially anticipated.
+Notably, the employment of `spData` and `leaflet` effectively visualised
+these findings.
 
-Several limitations have impacted the final analysis. Firstly, there is a scarcity of observations, primarily because this plant is not commonly sought after or reported by individuals. Secondly, the absence of weather recordings in remote areas may result in gaps in the dataset. Additionally, extrapolating weather data from one region to the entire species range, instead of relying on the actual weather conditions recorded in each area, could introduce inaccuracies into the analysis.
+Several limitations have impacted the final analysis. Firstly, there is
+a scarcity of observations, primarily because this plant is not commonly
+sought after or reported by individuals. Secondly, the absence of
+weather recordings in remote areas may result in gaps in the dataset.
+Additionally, extrapolating weather data from one region to the entire
+species range, instead of relying on the actual weather conditions
+recorded in each area, could introduce inaccuracies into the analysis.
 
 ![](https://static.inaturalist.org/photos/54862576/medium.jpg){fig-align="center"}
 
@@ -67,19 +82,25 @@ Several limitations have impacted the final analysis. Firstly, there is a scarci
 2. Download all the occurrence records from the Atlas of Living Australia, ideally scripted using the `atlas_occurrences()` function from the `galah` package. Make sure you include date, time, collector identification details. Save this into a `data-raw` folder in your repo.
 -->
 ```
-
 ### Species data
 
-Below is the code to download the raw data directly from the [Atlas of Living Australia](https://www.ala.org.au/).
+Below is the code to download the raw data directly from the [Atlas of
+Living Australia](https://www.ala.org.au/).
 
-The basis of record was filtered to `HUMAN_OBSERVATION` only. This decision was made because we intended to focus solely on sightings of the species in the wild, and differentiate between specimens that were preserved, collected samples, or in controlled environments such as museums. 
+The basis of record was filtered to `HUMAN_OBSERVATION` only. This
+decision was made because we intended to focus solely on sightings of
+the species in the wild, and differentiate between specimens that were
+preserved, collected samples, or in controlled environments such as
+museums.
 
-We have also checked the `BASIS_OF_RECORD_INVALID` to determine
-the reliability of each observation, in which all the `TRUE` results
-were removed in the process of sub-setting `HUMAN_OBSERVATION` entry in
-the `basisOfRecord`.
+We have also checked the `BASIS_OF_RECORD_INVALID` to determine the
+reliability of each observation, in which all the `TRUE` results were
+removed in the process of sub-setting `HUMAN_OBSERVATION` entry in the
+`basisOfRecord`.
 
-The other options, such as `LIVING SPECIMEN`, could imply captivity or control, `PRESERVED SPECIMEN` typically refers to non-living specimens, and `OCCURRENCE` was too general to confirm its wild state.
+The other options, such as `LIVING SPECIMEN`, could imply captivity or
+control, `PRESERVED SPECIMEN` typically refers to non-living specimens,
+and `OCCURRENCE` was too general to confirm its wild state.
 
 ```{r raw-data, eval=FALSE, echo=FALSE, message=FALSE, warning=FALSE}
 galah_config(email = "mpha0054@student.monash.edu",
@@ -109,9 +130,16 @@ storage <- galah_call() %>%
   filter(basisOfRecord == "HUMAN_OBSERVATION")
 ```
 
-The data obtained from the Atlas of Living Australia website combines information from multiple sources and includes various variables such as location, date, time, scientific names, resource names, species status, and more. The raw data set contains `r nrow(storage)` observations and `r ncol(storage)` variables.
+The data obtained from the Atlas of Living Australia website combines
+information from multiple sources and includes various variables such as
+location, date, time, scientific names, resource names, species status,
+and more. The raw data set contains `r nrow(storage)` observations and
+`r ncol(storage)` variables.
 
-For the analysis, the data is filtered to primarily focus on utilising the location and event time data. This is because the other variables do not contribute significantly to meaningful insights. However, a comprehensive dictionary of all the variables is provided below:
+For the analysis, the data is filtered to primarily focus on utilising
+the location and event time data. This is because the other variables do
+not contribute significantly to meaningful insights. However, a
+comprehensive dictionary of all the variables is provided below:
 
 ```{r data-dictionary, echo=FALSE, warning=FALSE}
 dictionary <- data.frame(
@@ -159,11 +187,20 @@ save(weeping_mulla_mulla, file = ("data/weeping_mulla_mulla.rda"))
 
 ### Weather data
 
-**Obtaining weather station data**
+#### **Obtaining weather station data**
 
-The distribution of the **Weeping Mulla Mulla** commonly spans the local government areas (LGAs) of Ashburton, Broome, Derby-West Kimberley, East Pilbara, Halls Creek, Karratha, Laverton, Meekatharra, Ngaanyatjarraku, Port Hedland, Upper Gascoyne, and Wyndham-East Kimberley, as per findings from ([Florabase](https://florabase.dbca.wa.gov.au/browse/profile.php/2704)).
+The distribution of the **Weeping Mulla Mulla** commonly spans the local
+government areas (LGAs) of Ashburton, Broome, Derby-West Kimberley, East
+Pilbara, Halls Creek, Karratha, Laverton, Meekatharra, Ngaanyatjarraku,
+Port Hedland, Upper Gascoyne, and Wyndham-East Kimberley, as per
+findings from
+([Florabase](https://florabase.dbca.wa.gov.au/browse/profile.php/2704)).
 
-Since weather is an important factor in the occurrences of species, the Global Historical Climatology Network (GHCN) database contains weather station data that are useful for analysing trends in weather patterns and precipitation. Obtaining the data via the `rnoaa` package for Australia was completed using the code below:
+Since weather is an important factor in the occurrences of species, the
+Global Historical Climatology Network (GHCN) database contains weather
+station data that are useful for analysing trends in weather patterns
+and precipitation. Obtaining the data via the `rnoaa` package for
+Australia was completed using the code below:
 
 ```{r weather-data, warning=FALSE, message=FALSE}
 library(rnoaa)
@@ -180,7 +217,9 @@ aus_stations <- ghcnd_stations() |>
   select(-data) 
 ```
 
-Next, when filtering the weather stations to be within the vicinity of **Weeping Mulla Mulla**, it becomes evident that the **Weeping Mulla Mulla** is found in the vicinity of 42 weather stations.
+Next, when filtering the weather stations to be within the vicinity of
+**Weeping Mulla Mulla**, it becomes evident that the **Weeping Mulla
+Mulla** is found in the vicinity of 42 weather stations.
 
 ```{r, echo=FALSE, results=FALSE}
 range(weeping_mulla_mulla$longitude)
@@ -220,6 +259,7 @@ combined_plot +
   scale_color_manual(values = c("FALSE" = "#222233", "TRUE" = "red")) +
   theme(legend.position = "none")
 ```
+
 ```{r echo=FALSE}
 weeping_mulla_mulla %>%
   leaflet() %>%
@@ -247,11 +287,18 @@ weeping_mulla_mulla %>%
                    radius = 5)
 ```
 
-The triangles on the map represent the locations of 42 weather stations. The purple points, with varying alpha and size settings, help to identify the areas with the highest occurrence rates. Notably, the white triangle represents the Tennant Creek Airport weather station, which records the majority of observations. Given this focus, the analysis can be narrowed down by filtering the weather station data specifically for Tennant Creek.
+The triangles on the map represent the locations of 42 weather stations.
+The purple points, with varying alpha and size settings, help to
+identify the areas with the highest occurrence rates. Notably, the white
+triangle represents the Tennant Creek Airport weather station, which
+records the majority of observations. Given this focus, the analysis can
+be narrowed down by filtering the weather station data specifically for
+Tennant Creek.
 
-**Obtaining weather data for Tennant Creek**
+#### **Obtaining weather data for Tennant Creek**
 
-The code for obtaining precipitation, maximum temperature, and minimum temperature data for the town is provided below:
+The code for obtaining precipitation, maximum temperature, and minimum
+temperature data for the town is provided below:
 
 ```{r, warning=FALSE, message=FALSE}
 tennant_creek_airport <- aus_stations |>
@@ -270,11 +317,21 @@ tennant_creek_airport <- aus_stations |>
 
 **Tennant Creek in Barkly Region**
 
-The `weeping_mulla_mulla` dataset has included local government information. Given that Tennant Creek is situated in the local government area of Barkly, the final step involves integrating the species data set with temperature data from weather stations and highlighting those observations belonging to the Barkly region.
+The `weeping_mulla_mulla` dataset has included local government
+information. Given that Tennant Creek is situated in the local
+government area of Barkly, the final step involves integrating the
+species data set with temperature data from weather stations and
+highlighting those observations belonging to the Barkly region.
 
-A new column named `sighting` is created. This column serves the crucial purpose of indicating whether a sighting occurred on a particular day or not and whether temperature data is available. Consequently, as all the observations within the Barkly region have corresponding temperature data, a comprehensive dataset can be generated that encompasses both observational data and daily weather information.
+A new column named `sighting` is created. This column serves the crucial
+purpose of indicating whether a sighting occurred on a particular day or
+not and whether temperature data is available. Consequently, as all the
+observations within the Barkly region have corresponding temperature
+data, a comprehensive dataset can be generated that encompasses both
+observational data and daily weather information.
 
 ```{r}
+# duplicated dates 
 temperature <- tennant_creek_airport %>%
   left_join(weeping_mulla_mulla, by = c("date" = "eventDate")) %>%
   select(date:Day) %>% 
@@ -292,7 +349,6 @@ save(temperature, file = ("data/temperature.rda"))
 Weather data pre-processing here too.
 -->
 ```
-
 ### Checking data quality
 
 We will be using `visdat` library to check for data type errors
@@ -322,13 +378,20 @@ degree is 111 kilometers) insignificant in our spatial analysis.
 
 ### Spatial expectation
 
-To evaluate the spatial distribution of the species, a method involving the use of a map to pinpoint locations was employed. This was achieved by utilising the `spData` package in conjunction with its `world` data.
+To evaluate the spatial distribution of the species, a method involving
+the use of a map to pinpoint locations was employed. This was achieved
+by utilising the `spData` package in conjunction with its `world` data.
 
-The initial expectation was that the majority of sightings would be concentrated in Western Australia. 
+The initial expectation was that the majority of sightings would be
+concentrated in Western Australia.
 
-The map displaying the sightings below validates the initial hypothesis. However, it also reveals a significant number of sightings in the Northern Territory.
+The map displaying the sightings below validates the initial hypothesis.
+However, it also reveals a significant number of sightings in the
+Northern Territory.
 
-Most of the sightings are clustered in the northern regions of Western Australia, aligning with expectations. Notably, there are no sightings in the southern areas of Western Australia, including the city of Perth.
+Most of the sightings are clustered in the northern regions of Western
+Australia, aligning with expectations. Notably, there are no sightings
+in the southern areas of Western Australia, including the city of Perth.
 
 ```{r, echo=FALSE}
 data(world, package = "spData")
@@ -351,14 +414,23 @@ combined_plot
 
 ### Temporal expectation
 
-To assess the temporal occurrences of the species, the same method of using a map to pinpoint locations was employed. However, an additional step was introduced, involving the segmentation of the data by month to distribute the results throughout the year.
+To assess the temporal occurrences of the species, the same method of
+using a map to pinpoint locations was employed. However, an additional
+step was introduced, involving the segmentation of the data by month to
+distribute the results throughout the year.
 
-The initial expectation was that the **Weeping Mulla Mulla** would exhibit a higher frequency of observations from March to October.
+The initial expectation was that the **Weeping Mulla Mulla** would
+exhibit a higher frequency of observations from March to October.
 
-The map displaying the sightings by month validates this initial hypothesis, as there are fewer data points on the map in January and February, as well as in November and December.
+The map displaying the sightings by month validates this initial
+hypothesis, as there are fewer data points on the map in January and
+February, as well as in November and December.
 
-Interestingly, a new insight emerges when the data is segmented by month. The previous map showed the regions where observations were most frequent, namely Western Australia and the Northern Territory. Now, when the data is subset by month, it becomes apparent that these two regions remain the primary clusters.
-
+Interestingly, a new insight emerges when the data is segmented by
+month. The previous map showed the regions where observations were most
+frequent, namely Western Australia and the Northern Territory. Now, when
+the data is subset by month, it becomes apparent that these two regions
+remain the primary clusters.
 
 ```{r, echo = FALSE}
 combined_plot +
@@ -367,8 +439,18 @@ combined_plot +
   labs(title = "Weeping Mulla Mulla Sightings By Month")
 ```
 
+To test the validity of our visual inference, we decided to employ
+`nullabor` null plots. Our hypotheses are as follows: 
+
+* $H_0:$ There is no difference in the distribution of geographical points between the "Active" months and the "Others" months.
+* $H_1:$ There is a difference in the distribution of geographical points between the "Active" months and the "Others" months.
+
 ```{r, echo=FALSE}
-# WIP
+set.seed(20190709)
+
+custom_weep <- weeping_mulla_mulla
+
+custom_weep$Month <- ifelse(custom_weep$Month >= 3 & custom_weep$Month <= 10, "Active", "Others")
 
 data(world, package = "spData")
 australia <- world[world$iso_a2 == "AU", ]
@@ -376,26 +458,40 @@ australia <- world[world$iso_a2 == "AU", ]
 australia_plot <- ggplot(australia) + geom_sf(fill = "#f3edd7") 
 
 combined_plot <- australia_plot +
-  geom_point(data = weeping_mulla_mulla,
-             aes(x = longitude, y = latitude, color = as.factor(Month))) +
+  geom_point(data = lineup(null_permute('Month'), custom_weep),
+             aes(x = longitude, y = latitude, col = Month)) +
   coord_sf(xlim = c(110 , 145 ), ylim = c(-10, -30)) +
-  labs(title = "Weeping Mulla Mulla Sightings Across Australia", 
-       x = "Longitude", 
-       y = "Latitude", 
-       subtitle = "1987 - Present") +
-  theme_minimal() +
-  theme(legend.position = "none")
+  facet_wrap(~.sample, ncol=5) +
+  theme_void() +
+  theme(axis.text = element_blank(), 
+        panel.border = element_rect(fill=NA, colour="black"),
+        legend.position = "None")
 
 combined_plot
 ```
 
+We have given the null plots to around 14 friends and only one of them picked the true plot at 16. This equates to the p-values below:
+
+```{r}
+pvisual(1,14,20)
+```
+`x simulated` shows 0.4612 and `binom` shows 0.512325 - both are above the threshold 0.05, which means that we reject the null hypothesis in favor of the alternative hypothesis. Consequently, we are 95% confident that the selection of the true plot is by chance and there is an association between the combinations of `longitude` and `latitude` for different `Month` periods ("*Active*" and "*Others*").
+
 ### Trend expectation
 
-Since the data relies on human observation, it was anticipated that there might have been fewer sightings due to a lack of reporting.
+Since the data relies on human observation, it was anticipated that
+there might have been fewer sightings due to a lack of reporting.
 
-By employing a simple method of plotting the number of observations against the years using a histogram, it can be seen that there was no indication of reduced observations during the COVID-19 years from 2000 to 2021. In fact, 2021 recorded the second-highest number of observations for the species.
+By employing a simple method of plotting the number of observations
+against the years using a histogram, it can be seen that there was no
+indication of reduced observations during the COVID-19 years from 2000
+to 2021. In fact, 2021 recorded the second-highest number of
+observations for the species.
 
-Nevertheless, an interesting new observation stands out - a significant spike in sightings occurred in 2015. This spike was the highest, surpassing even the sightings in 2021, with 108 observations compared to 34, which is more than three times as many.
+Nevertheless, an interesting new observation stands out - a significant
+spike in sightings occurred in 2015. This spike was the highest,
+surpassing even the sightings in 2021, with 108 observations compared to
+34, which is more than three times as many.
 
 Currently, there are no findings that can explain this phenomenon.
 
@@ -451,7 +547,6 @@ believe this is due to thunderstorms and flooding, preventing casual
 observers to stumble upon these plants. Only August has high sighting
 occurrences, as the end of winter has milder downpours.
 
-
 ### Habitat expectation
 
 Given that the **Weeping Mulla Mulla** prefers stony and sandy
@@ -472,7 +567,8 @@ weeping_mulla_mulla %>%
   addCircleMarkers(lng = ~longitude, 
                    lat = ~latitude,  
                    stroke = FALSE, 
-                   fillOpacity = 0.1
+                   fillOpacity = 0.1, 
+                   color = "#5b9b2e"
 )
 ```
 
@@ -490,7 +586,7 @@ weeping_mulla_mulla %>%
   addCircleMarkers(lng = ~longitude, 
                    lat = ~latitude,  
                    stroke = FALSE, 
-                   fillOpacity = 0.3, 
+                   fillOpacity = 0.5, 
                    color = "#5b9b2e"
 ) 
 ```
@@ -507,20 +603,40 @@ National 87 road, implying that these reports were made by passersby.
 ## References
 
 ### Websites
- - **iNaturalist**. Ptilotus calostachyus Image., Retrieved October 03, 2023, from https://www.inaturalist.org/taxa/869581-Ptilotus-calostachyus.
- - **Florabase**, Ptilotus calostachyus F.Muell., Retrieved September 29, 2023, from https://florabase.dbca.wa.gov.au/browse/profile.php/2704
- - **The Atlas of Living Australia**. Ptilotus calostachyus F.Muell.Retrieved September 27, 2023, from https://bie.ala.org.au/species/https://id.biodiversity.org.au/node/apni/2910906#
- overview
+
+-   **iNaturalist**. Ptilotus calostachyus Image., Retrieved October 03,
+    2023, from
+    https://www.inaturalist.org/taxa/869581-Ptilotus-calostachyus.
+-   **Florabase**, Ptilotus calostachyus F.Muell., Retrieved September
+    29, 2023, from
+    https://florabase.dbca.wa.gov.au/browse/profile.php/2704
+-   **The Atlas of Living Australia**. Ptilotus calostachyus
+    F.Muell.Retrieved September 27, 2023, from
+    https://bie.ala.org.au/species/https://id.biodiversity.org.au/node/apni/2910906#
+    overview
 
 ### Packages
- - **leaflet**: Cheng J, Schloerke B, Karambelkar B, Xie Y (2023). _leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet' Library_. R package version 2.2.0,
-  https://CRAN.R-project.org/package=leaflet.
- - **galah**: Westgate M, Kellie D, Stevenson M, Newman P (2023). _galah: Biodiversity Data from
-  the Living Atlas Community_. R package version 1.5.3,
-  https://CRAN.R-project.org/package=galah.
- - **kableExtra**: Zhu H (2021). _kableExtra: Construct Complex Table with 'kable' and Pipe Syntax_. R package version 1.3.4, https://CRAN.R-project.org/package=kableExtra.
- - **spData**: Bivand R, Nowosad J, Lovelace R (2023). _spData: Datasets for Spatial Analysis_. R
- - **tidyverse**:  Wickham H, Averick M, Bryan J, Chang W, McGowan LD, François R, Grolemund G, Hayes A, Henry L, Hester J, Kuhn M, Pedersen TL, Miller E, Bache SM, Müller K, Ooms J, Robinson D, Seidel DP, Spinu V, Takahashi K, Vaughan D, Wilke C, Woo K, Yutani H (2019). “Welcome to the tidyverse.” _Journal of Open Source Software_, *4*(43), 1686. doi:10.21105/joss.01686 https://doi.org/10.21105/joss.01686.
- - **visdat**: Tierney N (2017). “visdat: Visualising Whole Data Frames.” _JOSS_, *2*(16), 355.
-  doi:10.21105/joss.00355 https://doi.org/10.21105/joss.00355, http://dx.doi.org/10.21105/joss.00355.
 
+-   **leaflet**: Cheng J, Schloerke B, Karambelkar B, Xie Y (2023).
+    *leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet'
+    Library*. R package version 2.2.0,
+    https://CRAN.R-project.org/package=leaflet.
+-   **galah**: Westgate M, Kellie D, Stevenson M, Newman P (2023).
+    *galah: Biodiversity Data from the Living Atlas Community*. R
+    package version 1.5.3, https://CRAN.R-project.org/package=galah.
+-   **kableExtra**: Zhu H (2021). *kableExtra: Construct Complex Table
+    with 'kable' and Pipe Syntax*. R package version 1.3.4,
+    https://CRAN.R-project.org/package=kableExtra.
+-   **spData**: Bivand R, Nowosad J, Lovelace R (2023). *spData:
+    Datasets for Spatial Analysis*. R
+-   **tidyverse**: Wickham H, Averick M, Bryan J, Chang W, McGowan LD,
+    François R, Grolemund G, Hayes A, Henry L, Hester J, Kuhn M,
+    Pedersen TL, Miller E, Bache SM, Müller K, Ooms J, Robinson D,
+    Seidel DP, Spinu V, Takahashi K, Vaughan D, Wilke C, Woo K, Yutani H
+    (2019). "Welcome to the tidyverse." *Journal of Open Source
+    Software*, *4*(43), 1686. doi:10.21105/joss.01686
+    https://doi.org/10.21105/joss.01686.
+-   **visdat**: Tierney N (2017). "visdat: Visualising Whole Data
+    Frames." *JOSS*, *2*(16), 355. doi:10.21105/joss.00355
+    https://doi.org/10.21105/joss.00355,
+    http://dx.doi.org/10.21105/joss.00355.
